# fastmcp-oauth

./: LICENSE  README.md  pyproject.toml
config/: __init__.py  settings.py
core/: __init__.py  auth.py  middleware.py  provider.py  tokens.py
decorators/: __init__.py  auth.py
exceptions/: __init__.py  auth.py
fastmcp_oauth/: __init__.py
fastmcp_oauth/core/: provider.py
fastmcp_oauth/providers/: github.py
fastmcp_oauth/utils/: urls.py
providers/: __init__.py  base.py  google.py  microsoft.py
utils/: __init__.py  crypto.py
