[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastmcp-oauth"
version = "1.0.0"
description = "OAuth 2.1 + PKCE authentication for FastMCP servers with Google, Microsoft, and GitHub support"
authors = [
    {name = "FastMCP OAuth Contributors", email = "noreply@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["oauth", "fastmcp", "authentication", "microsoft", "google", "github", "mcp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: System :: Systems Administration :: Authentication/Directory",
]

dependencies = [
    "fastmcp>=2.7.0",
    "authlib>=1.6.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "starlette>=0.40.0",
    "cryptography>=41.0.0",
    "itsdangerous>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/peterlarnholt/fastmcp-oauth"
Repository = "https://github.com/peterlarnholt/fastmcp-oauth"
Issues = "https://github.com/peterlarnholt/fastmcp-oauth/issues"
Documentation = "https://github.com/peterlarnholt/fastmcp-oauth#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["fastmcp_oauth*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true